feat: harden cache consistency and recovery
Add distributed load locking, bounded Pub/Sub dispatch, and L1 trust recovery for invalidation delivery gaps.

Expand runtime observability, provider lifecycle coverage, consistency tests, and refresh docs for the M5 release.